update: git ignore with airflow files

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,13 @@
 /data
 
+# arquivos gerados pelo airflow
+/logs
+airflow-webserver.pid
+airflow.cfg
+airflow.db
+standalone_admin_password.txt
+webserver_config.py
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
